fix project page margin on mobile

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -570,6 +570,10 @@ footer ul {
   .about-text-wrapper {
     font-size: 1rem;
   }
+
+  .project-main {
+    margin-top: 2rem;
+  }
 }
 
 /******FONTS*******/
